feat: deploy configuration with tomcat local server